# rapid7mail

./: .gitignore  Dockerfile  README.md  pyproject.toml
rapid7mail/: __main__.py  config.py
rapid7mail/cmd/: __main__.py  cli_main.py  cli_tools.py
rapid7mail/handler/: eval_worker.py  helpers.py  py_eval.py  records.py  smtp_server.py  tasks.py  worker.py
rapid7mail/tools/: smtp_client.py  smtp_server.py
tests/: e2e_test.py  eval_test.py  helpers.py
