[tool.poetry]
name = "rapid7mail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosmtpd = "^1.4.4.post2"
click = "^8.1.7"
pytest = "^7.4.3"
asyncclick = "^8.1.3.4"
anyio = "^4.2.0"
aiosmtplib = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
