[tool.poetry]
name = "rapid7mail"
version = "0.1.0"
description = ""
authors = ["Dev01 <dev@outwarped.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosmtpd = "^1.4.4.post2"
click = "^8.1.7"
asyncclick = "^8.1.3.4"
anyio = "^4.2.0"
aiosmtplib = "^3.0.1"
asynctempfile = "^0.5.0"


[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.4.0"}
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"
flake8-pyproject = "^1.2.3"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
black = "^23.12.1"
flake8-import-order = "^0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 50

[tool.flake8]
max-line-length = 180
exclude = [
    ".history",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".nox",
    ".pytest_cache",
    ".mypy_cache",
]

extend-ignore = [
    "E203"
]

